<resources>
    <string name="app_name">Quản Lý Nhân Viên</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="manage_staff">Quản lý nhân viên</string>
    <string name="checkin_checkout">Quản lý chấm công</string>
    <string name="ho_ten">Họ Tên</string>
    <string name="nam_sinh">Năm sinh</string>
    <string name="email">Email</string>
    <string name="qr_code">QR Code</string>
    <string name="login">Login</string>
    <string name="insert_staff">Thêm Nhân Viên</string>
    <string name="insert">Thêm</string>
    <string name="save">Save</string>
    <string name="no_data">No Data</string>
    <string name="delete">Delete</string>
    <string name="edit">Sửa</string>
    <string name="detail_staff">Chi tiết nhân viên</string>
    <string name="scan">Scan QRCode</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scan_a_code">Scan QR to check in / check out</string>
    <string name="scan_to_check_in_check_out">[Scan to check]</string>
    <string name="checkout">Check out</string>
    <string name="checkin">Check in</string>
    <string name="detail_timecard">Chi tiết TimeCard</string>
    <string name="thoi_gian">Thời gian</string>
    <string name="choose_time">Chọn thời gian</string>
    <string name="insert_timecard">Thêm TimeCard</string>
    <string name="staff">Nhân viên</string>
    <string name="you_don_t_have_account_sign_up">You don\'t have account? Sign Up</string>
    <string name="password">Password</string>
    <string name="message">Message</string>
    <string name="yes">Yes</string>
    <string name="ok">OK</string>
    <string name="no">No</string>
    <string name="phone">Phone Number</string>
    <string name="phone_84">+84..</string>
    <string name="register">Register An Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_title">Register</string>
    <string name="reuired_email">Please enter your email!</string>
    <string name="required_phone">Please enter your phone number!</string>
    <string name="required_password">Please enter your password!</string>
    <string name="password_not_match">Your password is not match!</string>
    <string name="fullname">Full Name</string>
    <string name="reuired_fullName">Please enter your fullname!</string>
    <string name="profile">Profile</string>
    <string name="date">Date</string>
    <string name="tongiao">Religion</string>
    <string name="gender">Gender</string>
    <string name="address">Address</string>
    <string name="you_don_t_have_any_account_sign_up">You don\'t have any account? Sign Up</string>
    <string name="ma_nv">Mã NV</string>
    <string name="timecard">Chấm công</string>
    <string name="time">Thời gian</string>
    <string name="search">Tìm kiếm...</string>
    <string name="nh_n_vi_n">Nhân viên</string>
    <string name="edit_profile">Chỉnh sửa trang cá nhân</string>
    <string name="update">Update</string>
    <string name="empty"><![CDATA[<Empty>]]></string>
    <string name="s_n_l_ng">Sản lượng</string>
    <string name="done">Done</string>
    <string name="report">Thống kê</string>
    <string name="nhan_vien">Nhân Viên</string>
    <string name="time_report">Thời gian</string>
    <string name="month">Tháng</string>
    <string name="year">Năm</string>
    <string name="not_checkin">Check In Empty</string>
    <string name="not_checkout">Check out Empty</string>
    <string name="sanluong">Sản lượng : %s Kg</string>

    <string-array name="arrMonth">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>


    <string-array name="arrYear">
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
    </string-array>
</resources>