<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.InsertStaffActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/csHeader"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <ImageView
            android:id="@+id/imgBack"
            android:src="@drawable/ic_back"
            android:padding="17dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="match_parent"/>

        <TextView
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:text="@string/insert_timecard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <ImageView
        android:id="@+id/imgMaNV"
        android:layout_marginLeft="25dp"
        app:layout_constraintTop_toTopOf="@id/tvMaNV"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:tint="@color/black" />

    <TextView
        android:id="@+id/tvMaNV"
        android:textSize="16sp"
        android:layout_marginTop="25dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/csHeader"
        app:layout_constraintStart_toStartOf="@id/spinnerMaNV"
        android:text="@string/ma_nv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Spinner
        android:id="@+id/spinnerMaNV"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@id/tvMaNV"
        app:layout_constraintStart_toEndOf="@id/imgMaNV"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="NV001"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="10dp"
        android:layout_width="0dp"
        android:layout_height="35dp"/>

    <TextView
        android:id="@+id/etMaNV"
        android:background="@color/white"
        android:layout_marginRight="50dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="@id/spinnerMaNV"
        app:layout_constraintBottom_toBottomOf="@id/spinnerMaNV"
        app:layout_constraintStart_toStartOf="@id/spinnerMaNV"
        app:layout_constraintEnd_toEndOf="@id/spinnerMaNV"
        android:layout_width="0dp"
        android:layout_height="0dp"/>

    <View
        android:id="@+id/v1"
        android:alpha="0.2"
        app:layout_constraintStart_toStartOf="@id/spinnerMaNV"
        app:layout_constraintEnd_toEndOf="@id/spinnerMaNV"
        app:layout_constraintTop_toBottomOf="@id/spinnerMaNV"
        android:background="@color/black"
        android:layout_width="0dp"
        android:layout_height="1dp"/>


    <ImageView
        android:layout_marginLeft="25dp"
        app:layout_constraintTop_toTopOf="@id/tvName"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:tint="@color/black" />

    <TextView
        android:id="@+id/tvName"
        android:textSize="16sp"
        android:layout_marginTop="25dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/v1"
        app:layout_constraintStart_toStartOf="@id/spinnerMaNV"
        android:text="@string/ho_ten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/etName"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@id/tvName"
        app:layout_constraintStart_toStartOf="@id/tvName"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Anderson"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginRight="25dp"
        android:layout_width="0dp"
        android:layout_height="35dp"/>

    <View
        android:id="@+id/v2"
        android:alpha="0.2"
        app:layout_constraintStart_toStartOf="@id/etName"
        app:layout_constraintEnd_toEndOf="@id/etName"
        app:layout_constraintTop_toBottomOf="@id/etName"
        android:background="@color/black"
        android:layout_width="0dp"
        android:layout_height="1dp"/>

    <ImageView
        android:layout_marginLeft="25dp"
        app:layout_constraintTop_toTopOf="@id/tvEmail"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_baseline_email_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:tint="@color/black" />

    <TextView
        android:id="@+id/tvEmail"
        android:textSize="16sp"
        android:layout_marginTop="25dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/v2"
        app:layout_constraintStart_toStartOf="@id/spinnerMaNV"
        android:text="@string/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/etEmail"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@id/tvEmail"
        app:layout_constraintStart_toStartOf="@id/tvEmail"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Pikakun19@gmail.com"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginRight="25dp"
        android:layout_width="0dp"
        android:layout_height="35dp"/>

    <View
        android:id="@+id/v3"
        android:alpha="0.2"
        app:layout_constraintStart_toStartOf="@id/etEmail"
        app:layout_constraintEnd_toEndOf="@id/etEmail"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        android:background="@color/black"
        android:layout_width="0dp"
        android:layout_height="1dp"/>

    <ImageView
        android:layout_marginLeft="25dp"
        app:layout_constraintTop_toTopOf="@id/tvDate"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_baseline_alarm_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:tint="@color/black" />

    <TextView
        android:id="@+id/tvDate"
        android:textSize="16sp"
        android:layout_marginTop="25dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/v3"
        app:layout_constraintStart_toStartOf="@id/spinnerMaNV"
        android:text="@string/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/etDate"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@id/tvDate"
        app:layout_constraintStart_toStartOf="@id/tvDate"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="16:20 21/02/2021"
        android:gravity="center_vertical"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginRight="25dp"
        android:layout_width="0dp"
        android:layout_height="35dp"/>

    <ImageView
        android:id="@+id/btnChooseTime"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        app:layout_constraintTop_toTopOf="@id/etDate"
        app:layout_constraintBottom_toBottomOf="@id/etDate"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_baseline_alarm_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:tint="@color/black" />

    <View
        android:id="@+id/v4"
        android:alpha="0.2"
        app:layout_constraintStart_toStartOf="@id/etDate"
        app:layout_constraintEnd_toEndOf="@id/etDate"
        app:layout_constraintTop_toBottomOf="@id/etDate"
        android:background="@color/black"
        android:layout_width="0dp"
        android:layout_height="1dp"/>

    <Button
        android:id="@+id/btnInsert"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="16sp"
        android:textAllCaps="true"
        android:text="@string/insert"
        android:background="@drawable/bg_btn"
        android:layout_marginTop="75dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        app:layout_constraintTop_toBottomOf="@id/etDate"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>