<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash2"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.login.LoginActivity">

   <TextView
       android:id="@+id/tvLogo"
       android:textSize="25sp"
       android:fontFamily="@font/poppins_bold"
       android:textColor="@color/white"
       android:layout_marginTop="55dp"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       android:text="Quản Lý\nChi Tiêu"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/imgEmail"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="55dp"
        app:layout_constraintTop_toBottomOf="@id/tvLogo"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_baseline_email_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/tvEmail"
        app:layout_constraintTop_toTopOf="@id/imgEmail"
        app:layout_constraintStart_toEndOf="@id/imgEmail"
        android:textSize="16sp"
        android:layout_marginLeft="10dp"
        android:textColor="@color/white"
        android:text="@string/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@id/tvEmail"
        app:layout_constraintStart_toStartOf="@id/tvEmail"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="Email"
        android:text="admin.qlnv@gmail.com"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginRight="25dp"
        android:layout_width="0dp"
        android:layout_height="35dp"/>

    <View
        android:id="@+id/v3"
        android:alpha="0.2"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/etEmail"
        app:layout_constraintEnd_toEndOf="@id/etEmail"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        android:background="@color/white"
        android:layout_width="0dp"
        android:layout_height="1dp"/>

    <ImageView
        android:id="@+id/imgPassword"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/v3"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/tvPassword"
        app:layout_constraintTop_toTopOf="@id/imgPassword"
        app:layout_constraintStart_toEndOf="@id/imgPassword"
        android:textSize="16sp"
        android:layout_marginLeft="10dp"
        android:textColor="@color/white"
        android:text="Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_marginTop="10dp"
        android:hint="Password"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@id/tvPassword"
        app:layout_constraintStart_toStartOf="@id/tvPassword"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:inputType="textPassword"
        android:text="123456"
        android:layout_marginRight="25dp"
        android:layout_width="0dp"
        android:layout_height="35dp"/>

    <View
        android:id="@+id/v4"
        android:alpha="0.2"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/etPassword"
        app:layout_constraintEnd_toEndOf="@id/etPassword"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        android:background="@color/white"
        android:layout_width="0dp"
        android:layout_height="1dp"/>

    <TextView
        android:id="@+id/btnLogin"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="16sp"
        android:textAllCaps="true"
        android:text="@string/login"
        android:background="@drawable/bg_btn"
        android:layout_marginTop="75dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <TextView
        android:layout_marginTop="20dp"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:text="@string/you_don_t_have_any_account_sign_up"
        app:layout_constraintStart_toStartOf="@id/btnLogin"
        app:layout_constraintEnd_toEndOf="@id/btnLogin"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>